# saferskills

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .lighthouserc.docs.json  .lighthouserc.json  .lighthouserc.staging.json  .pre-commit-config.yaml  .release-please-manifest.json  .secrets.baseline  AGENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  NOTICE  README.md  RULES.md  SECURITY.md  biome.json  codecov.yml  docker-compose.override.yml.example  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  tsconfig.base.json
cli/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  package.json
cli/npm/saferskills/: package.json
cli/npm/saferskills-darwin-arm64/: package.json
cli/npm/saferskills-darwin-x64/: package.json
cli/npm/saferskills-linux-arm64/: package.json
cli/npm/saferskills-linux-x64/: package.json
cli/npm/saferskills-win32-x64/: package.json
cli/npm/saferskills/lib/: index.js  postinstall.js  resolve-binary.js
cli/src/: lib.rs  main.rs
cli/src/agents/: SCHEMAS.md  detect.rs  enumerate.rs  mod.rs  writer.rs
cli/src/agents/writers/: claude_code.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  openclaw.rs  render.rs  windsurf.rs
cli/src/api/: dto.rs  mod.rs
cli/src/cli/: color.rs  header.rs  mod.rs  output.rs
cli/src/commands/: agent.rs  agent_scan.rs  audit.rs  capability.rs  completion.rs  doctor.rs  info.rs  install.rs  list.rs  mod.rs  report.rs  scan.rs  search.rs  uninstall.rs  update.rs
cli/src/core/: agent_name.rs  baseline.rs  config.rs  error.rs  http.rs  mod.rs  pow.rs  registry.rs  rules_content.rs  scan_cache.rs  telemetry.rs
cli/src/core/crash_report/: config.rs  consent.rs  mod.rs  scrub.rs
cli/src/tui/: mod.rs  terminal.rs
cli/src/tui/search/: mod.rs  rank.rs  state.rs  view.rs
cli/tests/: agent_scan_cli.rs  agent_scan_flow.rs  api_client.rs  capability_cli.rs  contract.rs  lifecycle_cli.rs  lifecycle_test.rs  matrix.rs  scan_cli.rs  scan_flow.rs  smoke.rs
cli/tests/fixtures/: saferskills.SKILL.md
cli/tests/fixtures/claude_code/: before.jsonc
cli/tests/fixtures/codex/: before.toml
cli/tests/matrix/: RUNBOOK.md
services/api/: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  fly.production.toml  fly.staging.toml  openapi.json  pyproject.toml
services/api/app/: main.py  queries.py  worker_main.py
services/api/app/agent_scan/: __init__.py  asn.py  bootstrap.py  canary.py  components.py  directory.py  grading.py  naming.py  normalize.py  pack.py  pasteback.py  persistence.py  report.py  run_token.py  scoring.py  signing.py  telemetry.py
services/api/app/core/: access_log_middleware.py  config.py  db_pool.py  feature_flags.py  github_app_token.py  log_redaction.py  logging.py  memory.py  middleware.py  observability.py  rate_limit.py  shutdown.py  startup.py  startup_state.py  sweeps.py
services/api/app/db/: __init__.py  session.py
services/api/app/ingestion/: __init__.py  enqueue.py  popularity.py  replay.py  run_one_cycle.py  tasks.py  tasks_archive.py  tasks_authors.py  tasks_auto_scan.py  tasks_indexnow.py  tasks_popularity.py  tasks_retention.py  tasks_scan.py  worker.py
services/api/app/models/: __init__.py  _relationships.py  access_log.py  admin_audit_log.py  agent_evidence.py  agent_run_token_spent.py  agent_scan_telemetry.py  agent_verify_waitlist.py  artifact_blob.py  author.py  base.py  catalog_item.py  cli_pow_spent.py  crawler_cursor.py  ingestion_run.py  install_event.py  item_source.py  popularity_formula.py  rate_limit.py  repo_fetch_state.py  scan.py  scan_event.py  scan_run.py  upload_file.py  vendor.py
services/api/app/observability/: __init__.py  events.py
services/api/app/queue/: __init__.py  scan_runner.py
services/api/app/routers/: admin.py  agent_scans.py  community.py  health.py  installs.py  items.py  rubric.py  scans.py  scans_stub.py  sitemap.py  stats.py  vendor.py  webhooks.py
services/api/app/scan/: __init__.py  constants.py  discovery.py  engine.py  fetch.py  persistence.py  report_builder.py  rubric.py  upload.py
services/api/app/schemas/: agent_scan.py  catalog_summary.py  installs.py  item_detail.py  orm_base.py  rubric.py  rule_prose.py  scan_report_summary.py  scan_run.py  scan_submit.py  stats.py
services/api/app/seo/: __init__.py  indexnow.py  sitemap.py
services/api/app/services/: __init__.py  agent_compat.py  artifact_bytes.py  artifact_diff.py  cli_pow.py  finding_evidence.py  github_stars.py  repository_metadata.py  rule_prose.py  slack_invite_health.py  turnstile.py
services/api/migrations/: env.py  script.py.mako
services/api/migrations/versions/: 2026_05_26_0001_initial_scan_surface.py  2026_05_28_0002_add_scan_events.py  2026_05_29_0003_add_agent_compatibility.py  2026_05_31_0004_add_repo_metadata.py  2026_05_31_0005_add_scan_manifest.py  2026_06_01_0006_add_artifact_blobs.py  (+20 more)
services/api/scripts/: generate_pydantic_models.py  generate_sqlalchemy_models.py  ingestion_smoke.py
services/api/tests/: conftest.py  pow_helpers.py  test_config.py  test_connection_budget.py  test_db_timeout.py  test_health.py  test_migration_0019.py  test_migration_0024.py  test_models_smoke.py  test_observability_events.py  test_repository_metadata.py  test_scan_runner_emit.py  test_slack_invite_health.py  test_stats.py  test_upload_config_schema.py
tools/data-seed/: CLAUDE.md  README.md  pyproject.toml
tools/data-seed/saferskills_data_seed/: __init__.py  cli.py
tools/e2e/: CLAUDE.md  README.md  pyproject.toml
tools/e2e/saferskills_e2e/: __main__.py  cli.py
tools/e2e/tests/: test_http_retries.py
tools/fp-audit/: README.md  pyproject.toml  thresholds.yaml
tools/fp-audit/fixtures/: README.md
tools/fp-audit/saferskills_fp_audit/: __init__.py  cli.py  runner.py
tools/saferskills-admin/: CLAUDE.md  README.md  pyproject.toml
tools/saferskills-admin/saferskills_admin/: __init__.py  cli.py
tools/saferskills-admin/tests/: test_cli_smoke.py  test_dashboard_tui.py
(+1022 files in other folders)
