[package]
name = "saferskills"
version = "0.1.1"     # release-please (rust) bumps this on each release
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "Every AI capability, independently scanned — install Skills & MCP servers with a verified SaferSkills trust score."
repository = "https://github.com/OpenLatch/saferskills"
homepage = "https://saferskills.ai"
keywords = ["ai-agents", "mcp", "skill", "security", "scanner"]   # <=5 (crates.io cap); npm keywords are richer (SEO-C1)
categories = ["command-line-utilities", "development-tools"]
default-run = "saferskills"
exclude = ["npm/", "tests/", ".github/"]

[[bin]]
name = "saferskills"
path = "src/main.rs"

[lib]
name = "saferskills"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4"                  # tracks clap 4.x (completion scripts)
clap_mangen = "0.2"                  # man-page generation from the same Command (D-05-18, design §7)
inquire = "0.7"                      # interactive prompts
indicatif = "0.18"                   # spinners → stderr
terminal_size = "0.4"                # exact terminal width for the banner rule (already in-tree via console)
anstream = "0.6"
anstyle = "1"
colorchoice-clap = "1"
# rustls-tls enabled directly at the binary level (single crate ⇒ no feature
# unification trick needed). The `cli-rustls` CI lane greps the dep tree to
# keep openssl-sys / native-tls out.
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.6"          # SSE (scan progress stream)
sha2 = "0.10"                        # pure-Rust SHA-256 for the PoW solver (rustls-safe; no openssl)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
# Interactive `search` TUI (live server search + facet sidebar + multi-select +
# preview). All TLS-free (the `cli-rustls` CI lane stays green). ratatui draws to
# stderr (stdout stays machine-clean); crossterm's `event-stream` feature backs
# the async key loop; nucleo does the local fuzzy re-rank of the candidate pool.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
nucleo = "0.5"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"                         # config.toml parse
toml_edit = "0.22"                   # format-preserving MCP-config writes
jsonc-parser = { version = "0.32", features = ["cst", "serde", "serde_json"] }   # JSONC agent configs
zip = { version = "8", default-features = false, features = ["deflate"] }        # upload packaging for scan
strsim = "0.11"                      # jaro_winkler did-you-mean
anyhow = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
tempfile = "3"                       # atomic temp-then-rename writes

# Sentry crash reporting — panics only, rustls-only TLS (no OpenSSL/native-tls,
# so the `cli-rustls` CI lane stays green). Optional + feature-gated so a build
# without `crash-report` drops the dep entirely from the graph. Mirrors
# openlatch-client. See src/core/crash_report/ + .claude/rules/telemetry.md.
sentry = { version = "0.48", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
    "reqwest",
    "rustls",
], optional = true }

[features]
default = []
# Additive PostHog HTTP path (mirror openlatch-client gating). When OFF the
# `command_invoked` event is computed but never sent; when ON it is POSTed only
# if a key was baked AND consent + opt-out env allow it (D-05-13).
telemetry-network = []
# Rust panic reporting to Sentry (crash_report module). Scrubbed before send.
# Disabling drops the `sentry` dep entirely from the graph; the module exposes a
# no-op shim under `#[cfg(not(feature = "crash-report"))]` so main.rs compiles
# in both configs (mirror openlatch-client).
crash-report = ["dep:sentry"]
# Test-only override of the baked PostHog host/key. NEVER enabled in releases.
insecure-test-keys = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "minwinbase", "wincon"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
mockito = "1"
insta = "1"
tempfile = "3"

# NO [build-dependencies] — build.rs only reads an env var to bake
# SAFERSKILLS_POSTHOG_KEY (no typify/schemars/syn/prettyplease; wire DTOs are
# hand-written in src/api/dto.rs, D-05-08).

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# Panic strategy: UNWIND (the default — note the deliberate absence of
# `panic = "abort"`). Mirrors openlatch-client so Sentry's panic integration
# captures a full backtrace on a crash. Empirically verified the release binary
# stays well under the 15 MB `cli-build` gate (~3.6 MB with crash-report on), so
# the abort-fallback path the plan allowed for is not needed. Re-measure if a
# future dep pushes the binary near the gate.
# Packed DWARF so `sentry-cli debug-files upload` can locate per-target symbol
# files in release artifacts (separate-symbol upload).
split-debuginfo = "packed"
