[project]
name = "saferskills-api"
version = "0.0.0+foundation"
description = "SaferSkills API — FastAPI backend for the public AI-agent trust-scoring catalog."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenLatch, Inc.", email = "hello@openlatch.ai" }]

dependencies = [
  "fastapi[standard]>=0.136",
  "uvicorn[standard]>=0.36",
  "pydantic>=2.13",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.18",
  "asyncpg>=0.30",
  "sentry-sdk[fastapi]>=2.20",
  "posthog>=3.7",                # server-side product analytics + feature-flag eval
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "opentelemetry-instrumentation-fastapi>=0.51b0",
  "opentelemetry-exporter-otlp-proto-http>=1.30",   # OTLP/HTTP span export → shared Grafana Vector
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
  "opentelemetry-instrumentation-httpx>=0.51b0",
  "structlog>=25.0",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "sse-starlette>=2.4",
  "aiofiles>=24.1",
  "pyjwt>=2.10",
  # I-04 Phase A — ingestion infrastructure
  "procrastinate>=3.8,<4",       # PG-backed async task queue; cron + retries + DLQ + advisory locks
  "psycopg[binary]>=3.2",        # libpq wrapper for Procrastinate's PsycopgConnector (binary wheel)
  "hishel[httpx]>=1.2,<2",       # HTTPX RFC-9111 cache (httpx extra → anysqlite + anyio); 304s free vs GitHub rate limit
  "rapidfuzz>=3.10,<4",          # Fuzzy name match (token_set_ratio + JaroWinkler), native C++ backend
  "croniter>=6.0,<7",            # cron-expression parsing (also a Procrastinate transitive dep; pinned explicit)
  "rfc8785>=0.1,<1",             # JCS-canonical JSON for content_hash_sha256 (RFC 8785, OpenLatch-compatible)
  "protego>=0.4,<1",             # robots.txt parser (framework hook now; consumed by Phase B scraping)
  "cryptography>=43",            # RS256 backend for PyJWT GitHub App installation-token signing
  # I-04 Phase B — lean aggregator scrape stack (NO Playwright/Chromium per the re-based plan)
  "curl_cffi~=0.13",             # browser-impersonating HTTP client (tier-1 HTML fetch; Cloudflare-aware)
  "trafilatura~=2.0",            # main-content extraction from scraped HTML (descriptions)
  "beautifulsoup4~=4.12",        # listing/item-page DOM parsing (bs4 selectors)
  "lxml>=6.0.1,<7",              # fast parser backend for bs4 + trafilatura (6.0.1+ ships cp314 wheels)
  "defusedxml~=0.7",             # XXE/billion-laughs-safe XML parse for untrusted aggregator sitemaps
  "maxminddb>=2.6,<4.0",              # reads the IPinfo Lite .mmdb for agent-scan IP->ASN telemetry (I-5.5)
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "pyright>=1.1.390",
  "datamodel-code-generator>=0.26",
  "jinja2>=3.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["app/schemas/generated", "app/models/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI mandates Depends() / Query() / Body() / Path() in argument defaults.
"app/routers/**" = ["B008"]
# The homoglyph fold table legitimately contains Cyrillic/Greek look-alikes —
# that IS its purpose (fold script-swaps to ASCII before canary matching).
"app/agent_scan/normalize.py" = ["RUF001"]
# The normalize test feeds homoglyph + zero-width chars on purpose (it asserts the
# ladder folds them); the ambiguous-character lint is the behaviour under test.
"tests/agent_scan/test_normalize.py" = ["RUF001", "RUF003"]

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/generated/**"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Share one event loop across all async fixtures + tests so the session-scoped
# db_engine fixture (which runs `alembic upgrade head` once) isn't torn down
# between tests — otherwise pytest-asyncio 0.24+ binds the engine to a
# function-scoped loop that closes after test 1, and subsequent tests see
# "Future attached to a different loop". Test isolation still comes from
# db_session's per-test SAVEPOINT/rollback in conftest.py.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.coverage.run]
omit = [
  "app/schemas/generated/*",
  "app/models/generated/*",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "pragma: no cover",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
