[project]
name = "saferskills-data-seed"
version = "0.1.0"
description = "SaferSkills dev tool: seed catalog + scans + vendor responses; purge org state."
requires-python = ">=3.13"
dependencies = [
    "typer[all] >= 0.19",
    "httpx >= 0.28",
    "pyyaml >= 6.0",
    "rich >= 13.0",
    "pydantic >= 2.10",
]

[project.scripts]
saferskills-data-seed = "saferskills_data_seed.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saferskills_data_seed"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
