[project]
name = "saferskills-e2e"
version = "0.0.0"
description = "End-to-end test orchestrator for the SaferSkills platform."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "playwright>=1.60",
    "structlog>=25.0",
    "pydantic>=2.13",
    "rich>=14.0",
]

[project.scripts]
saferskills-e2e = "saferskills_e2e.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.13",
    "pyright>=1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saferskills_e2e"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
include = ["saferskills_e2e"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingTypeStubs = false
