[project]
name = "saferskills-fp-audit"
version = "0.1.0"
description = "False-positive audit harness for the SaferSkills rubric (D-21)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenLatch, Inc.", email = "hello@openlatch.ai" }]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.28",
  "pydantic>=2.13",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.9",
  "pyright>=1.1.390",
]

[project.scripts]
fp-audit = "saferskills_fp_audit.cli:app"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["saferskills_fp_audit"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saferskills_fp_audit"]
