[project]
name = "saferskills-admin"
version = "0.1.0"
description = "SaferSkills operator CLI: sources, merge-candidates, catalog, popularity, admin-key. X-Admin-Key gated."
requires-python = ">=3.13"
dependencies = [
    "typer[all] >= 0.19",
    "httpx >= 0.28",
    "rich >= 13.0",
    "pydantic >= 2.10",
]

[dependency-groups]
dev = [
    "ruff >= 0.7.0",
    "pytest >= 8.0",
]

[project.scripts]
saferskills-admin = "saferskills_admin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saferskills_admin"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
